--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://amanbaba8494-web.github.io/mindmate",
+    "homepage": "https://amanbaba8494-web.github.io/react-mindmate",
     "name": "minemate-project",
     "version": "0.1.0",
     "private": true,
