--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 18
 
       - run: npm install
-      - run: npm run build
+      - run: PUBLIC_URL=/react-mindmate npm run build
 
       - uses: actions/upload-pages-artifact@v3
         with:
