--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,10 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 18.18.2   # lock exact version
+          cache: 'npm'
 
-      - run: npm install
-
-      - run: chmod +x node_modules/.bin/react-scripts
+      - run: npm ci
 
       - run: PUBLIC_URL=/react-mindmate npm run build
 
@@ -34,6 +33,5 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/deploy-pages@v4
